[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://hud/ScoresHud.gd" type="Script" id=2]
[ext_resource path="res://basic-theme.tres" type="Theme" id=3]
[ext_resource path="res://hud/PartScore.tscn" type="PackedScene" id=4]

[node name="ScoresHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -201.0
margin_right = 143.0
margin_bottom = 108.0
theme = ExtResource( 3 )

[node name="Legacy" type="TabContainer" parent="CanvasLayer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = -10.0
tab_align = 0

[node name="First" type="Control" parent="CanvasLayer/TabContainer/Legacy"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = -10.0

[node name="PartScoreControl" parent="CanvasLayer/TabContainer/Legacy/First" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Easy" type="Control" parent="CanvasLayer/TabContainer/Legacy"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="PartScoreControl" parent="CanvasLayer/TabContainer/Legacy/Easy" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Hard" type="Control" parent="CanvasLayer/TabContainer/Legacy"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="PartScoreControl" parent="CanvasLayer/TabContainer/Legacy/Hard" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Standard" type="TabContainer" parent="CanvasLayer/TabContainer"]
visible = false
margin_top = 24.0
margin_right = 8.0
margin_bottom = 36.0
tab_align = 0

[node name="Easy" type="Control" parent="CanvasLayer/TabContainer/Standard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = -10.0
margin_bottom = -10.0

[node name="PartScoreControl" parent="CanvasLayer/TabContainer/Standard/Easy" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Hard" type="Control" parent="CanvasLayer/TabContainer/Standard"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="PartScoreControl" parent="CanvasLayer/TabContainer/Standard/Hard" instance=ExtResource( 4 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Button" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5
margin_top = -96.0
margin_right = 57.5
margin_bottom = -54.0
theme = ExtResource( 3 )
text = "Back"

[node name="Background" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="tab_changed" from="CanvasLayer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="tab_changed" from="CanvasLayer/TabContainer/Legacy" to="." method="_on_Legacy_tab_changed"]
[connection signal="tab_changed" from="CanvasLayer/TabContainer/Standard" to="." method="_on_Standard_tab_changed"]
